<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background_color"
    tools:context=".ui.MainActivity"
    tools:viewBindingIgnore="true">

    <TextView
        android:id="@+id/textViewStudentFio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="bottom|start"
        android:layout_marginEnd="16dp"
        android:background="#3A3939"
        android:paddingStart="8dp"
        tools:text="@string/student_fio"
        android:textAlignment="gravity"
        android:textColor="@color/common_text_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/textViewQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="bottom|start"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="#3A3939"
        android:paddingStart="8dp"
        tools:text="@string/student_question"
        android:textAlignment="gravity"
        android:textColor="@color/common_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/editTextWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewStudentFio"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="false"
        android:background="@drawable/rounded_corner"
        android:hint="@string/hint_main_activity"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="#C5C5C5"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewQuestion"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextWord"
        app:layout_constraintVertical_chainStyle="packed">

        <Button
            android:id="@+id/buttonDefinition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="#282727"
            android:padding="8dp"
            android:text="@string/left_button_text"
            android:textColor="@color/common_text_color"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:backgroundTint="#282727"
            android:padding="8dp"
            android:text="@string/right_button_text_main"
            android:textColor="@color/common_text_color"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>